# cc-self-reference

./: .gitignore  AddingNumbers.cc  CCReferenceIndex.cc  CMakeLists.txt  CPPWorkshopConfig.h.in  CallingHeader.cc  CharArray.cc  CharacterIntro.cc  CommaOperator.cc  ComparingFloatingPoint.cc  ConditionalCompilation.cc  DirectInitialization.cc  Exponentiation.cc  FixedWidthIntegers.cc  ForwardDeclaration.cc  FunctionDefinition.cc  Getline.cc  HelloWorld.cc  Infinity.cc  InputBooleanValues.cc  ListInitialization.cc  MapExample.cc  NamedConstants.cc  NamingConflict.cc  NumeralSystem.cc  PassByReferenceExample.cc  README.md  ScanMultipleNumbers.c  ScopeOfDefines.cc  SizeOfTypes.cc  SizeT.cc  StaticCasting.cc  StringViewCornerCase.cc  StringViewCornerCase2.cc  StringViewCornerCase3.cc  StringViewCornerCase4.cc  StringViewExample.cc  StringViewSubstr.cc  VariableScope.cc  VectorExample.cc  (+3 more)
AddingHeaderFiles/: main.cc
Ch1/: CMakeLists.txt  Ch1.h  DirectInitialization.cc  HelloWorld.cc  HelloWorld.h  ListInitialization.cc  SizeOfInt.cc
Ch2/: AddingHeaderFiles.cc  AddingHeaderFiles_add.cc  CMakeLists.txt  CallingHeader.cc  Ch2.h  ConditionalCompilation.cc  ForwardDeclaration.cc  FunctionDefinition.cc  InfinityDemo.cc  ScopeOfDefines.cc  VariableScope.cc
Ch4/: CMakeLists.txt  Ch4.h  CharArray.cc  CharacterIntro.cc  FixedWidthIntegers.cc  InputBooleanValues.cc  SizeOfTypes.cc  SizeT.cc  StaticCasting.cc
Ch5/: CMakeLists.txt  Ch5.h  GetlineDemo.cc  NamedConstants.cc  NumeralSystem.cc  StringViewCornerCase.cc  StringViewCornerCase2.cc  StringViewCornerCase3.cc  StringViewCornerCase4.cc  StringViewExample.cc  StringViewSubstr.cc
Ch6/: CMakeLists.txt  Ch6.h  CommaOperator.cc  ComparingFloatingPoint.cc  Exponentiation.cc  ShortCircuitEvaluation.cc
Ch7/: AnonymousNamespace.cc  AutoIncrement.cc  AutoStorageDuration.cc  CMakeLists.txt  Ch7.h  DefiningVariablesWithLinkage.cc  ExternalLinkage.cc  G_ExtVariablesExample.cc  G_InlVariablesExample.cc  G_IntVariablesExample.cc  GlobalConstantsExample.cc  InlineFunction.cc  InlineNamespace.cc  NamingCollision.cc  ReplacingNamespaces.cc  UsingAliases.cc  UsingDeclarations.cc  UsingNSForConstants.cc  UsingStaticLocalVariables.cc  add.cc  bar_kar.cc  constants.cc  foo.cc  goo.cc
Ch7/G_ExtVariables/: CMakeLists.txt  G_ExtVariables.h  README.md  chemistry.cc  constants.cc  echemistry.cc  emath.cc  ephysics.cc  externals.cc  externals.h  math.cc  physics.cc
Ch7/G_InlVariables/: CMakeLists.txt  G_InlVariables.h  inlines.h  lchemistry.cc  lmath.cc  lphysics.cc
Ch7/G_IntVariables/: CMakeLists.txt  G_IntVariables.h  README.md  chemistry.cc  constants.h  ichemistry.cc  imath.cc  internals.h  iphysics.cc  math.cc  physics.cc
Ch7/GlobalConstants/: CMakeLists.txt  GlobalConstants.h  chemistry.cc  math.cc  physics.cc
Ch8/: AtExit.cc  AtExitFn.cc  CMakeLists.txt  Ch8.h  ConstExprIf.cc  FallThroughSwitch.cc  GotoStatements.cc  MersenneTwister.cc  RandomNumberGenerator.cc  RandomNumberGeneratorWithChrono.cc  RandomNumberGeneratorWithRandomDevice.cc  SeedPRNG.cc  SimpleIf.cc  UniformIntDistribution.cc
ChO/: BitMask.cc  BitSetIntro.cc  BitwiseOperators.cc  CMakeLists.txt  ChO.h  DecimalToBinary.cc  ExtractRGBValues.cc  FlipTheBit.cc  ResettingABit.cc  SettingABit.cc
